--- a/Modulo7/aula4_eventos.html
+++ b/Modulo7/aula4_eventos.html
@@ -15,13 +15,16 @@
     <h2>Depósitos</h2>
     <form id="form-deposito">
       <input type="text" id="nome-beneficiario" required placeholder="Nome Completo do Beneficiário" />
+      <p class="error-message">
+        O nome precisa ser completo
+      </p>
       <input type="number" id="numero-conta" required placeholder="Número da conta" />
       <input type="number" id="valor-deposito" required placeholder="Valor" />
       <textarea placeholder="Descrição (opcional)" id="descricao"></textarea>
       <button id="btn-depositar" type="submit">Depositar</button>
 
     </form>
-<p class="sucess-message"></p>
+<p class="success-message"></p>
 
 
 
