att aula2.css aula2.html add aula3.js

--- a/Modulo8/aula2_estrutura.html
+++ b/Modulo8/aula2_estrutura.html
@@ -1,71 +1,66 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="aual2_estrutura.css">
   <title>Calculadora de Médias</title>
-</head>
-<body>
-  <header>
-    <img src="images/logo.png" alt="capelo e diploma">
-    <h1>Calculadora de Médias</h1>
-  </header>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <form>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="aula2_estrutura.css">
+</head>
+
+<body>
+  <div class="container">
+    <header>
+      <img src="images/logo.png" alt="capelo e diploma">
+      <h1>Calculadora de Médias</h1>
+    </header>
+
+    <form>
       <input type="text" required placeholder="Nome da atividade" />
       <input type="number" required placeholder="Nota da atividade" min="0" max="10" />
       <button type="submit">Adicionar +</button>
 
+    </form>
 
-  </form>
+    <table cellspacing="0">
+      <thead>
+        <tr>
+          <th>
+            Nome da atividade
+          </th>
+          <th>
+            Nota da atividade
+          </th>
+          <th>
+            Aprovado?
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Atividade 1</td>
+          <td>7</td>
+          <td><img src="images/aprovado.png" alt="Emoji festejando"></td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <td>Média final</td>
+          <td>7</td>
+          <td><span class="resultado aprovado">Aprovado</span></td>
 
-  <table>
-    <thead>
-      <tr>
-        <th>
-          Nome da atividade
-        </th>
-        <th>
-          Nota da atividade
-        </th>
-        <th>
-          Aprovado?
-        </th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Atividade 1</td>
-        <td>7</td>
-        <td><img src="images/aprovado.png" alt="Emoji festejando"></td>
-      </tr>
-    </tbody>
-    <tfoot>
-      <tr>
-        <td>Média final</td>
-        <td>7</td>
-        <td>Aprovado</td>
-
-      </tr>
-    </tfoot>
-
-
-  </table>
+        </tr>
+      </tfoot>
 
 
-
-
-
-
-
-
-
-
-
-
-
+    </table>
+  </div>
 
   <script src="aula2_estrutura.js"></script>
 </body>
+
 </html>
