--- a/Modulo8/aula2_estrutura.html
+++ b/Modulo8/aula2_estrutura.html
@@ -19,9 +19,9 @@
       <h1>Calculadora de Médias</h1>
     </header>
 
-    <form>
-      <input type="text" required placeholder="Nome da atividade" />
-      <input type="number" required placeholder="Nota da atividade" min="0" max="10" />
+    <form id="form-atv">
+      <input type="text" id="nome-atividade" required placeholder="Nome da atividade" />
+      <input type="number" id="nota-atividade" required placeholder="Nota da atividade" min="0" max="10" />
       <button type="submit">Adicionar +</button>
 
     </form>
