att aula2.js .html

--- a/Modulo8/aula2_estrutura.html
+++ b/Modulo8/aula2_estrutura.html
@@ -46,8 +46,8 @@
       <tfoot>
         <tr>
           <td>Média final</td>
-          <td>7</td>
-          <td><span class="resultado aprovado">Aprovado</span></td>
+          <td id="media-final-valor">---</td>
+          <td id="media-final-resultado">---</td>
 
         </tr>
       </tfoot>
