--- a/Modulo9/aula1_seleteroresindex.html
+++ b/Modulo9/aula1_seleteroresindex.html
@@ -24,6 +24,26 @@
   <button type="submit">Adicionar</button>
   <button type="reset" id="botao-cancel">Cancelar</button>
 </form>
+<ul>
+  <li>
+    <img src="images/foto1.jpg" alt="pintura de um gato"/>
+    <div class="overlay-imagem-link">
+      <a href="images/foto1.jpg" title="Ver imagem em tamanho real" target="_blank">Ver imagem em tamanho real</a>
+    </div>
+  </li>
+  <li>
+    <img src="images/foto2.jpg" alt="foto de um flamingo"/>
+    <div class="overlay-imagem-link">
+      <a href="images/foto2.jpg" title="Ver imagem em tamanho real" target="_blank">Ver imagem em tamanho real</a>
+    </div>
+  </li>
+  <li>
+    <img src="images/foto3.jpg" alt="foto de dois cachorro"/>
+    <div class="overlay-imagem-link">
+      <a href="images/foto3.jpg" title="Ver imagem em tamanho real" target="_blank">Ver imagem em tamanho real</a>
+    </div>
+  </li>
+</ul>
 
 
 
