--- a/Modulo9/aula1_seleteroresindex.html
+++ b/Modulo9/aula1_seleteroresindex.html
@@ -20,7 +20,7 @@
 </header>
 <form>
   <h2>Inserir nova imagem</h2>
-  <input type="url" required placeholder="URL da imagem"/>
+  <input type="url" id="endereco-imagem-nova" required placeholder="URL da imagem"/>
   <button type="submit">Adicionar</button>
   <button type="reset" id="botao-cancel">Cancelar</button>
 </form>
