att .html add script from slick to carousel

--- a/Modulo10/index.html
+++ b/Modulo10/index.html
@@ -10,31 +10,58 @@
   <title>EBAC Motors</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
+
+
 </head>
 
 <body>
   <header>
-    <h1>EBAC Motors</h1>
+    <div class="container">
+      <h1>EBAC Motors</h1>
+      <div class="menu-hamburguer">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
+    <nav>
+      <div class="container">
+        <ul>
+          <li>
+            <a href="#">Sobre</a>
+          </li>
+          <li>
+            <a href="#">Em destaque</a>
+          </li>
+          <li>
+            <a href="#">Promoções</a>
+          </li>
+          <li>
+            <a href="#">Contato</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
   </header>
+  <div id="carousel-images">
+    <img src="images/slide1.png" alt="carro da porshe">
+    <img src="images/slide2.png" alt="carro da bmw">
+    <img src="images/slide3.png" alt="carro da ford">
 
+  </div>
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-  <script src="main.js"></script>
-</body>
+  <script>
+    $(document).ready(function () {
+      $('#carousel-images').slick({
+        autoplay: true,
+      })
+    })
+  </script>
+ </body>
 
 </html>
