att index section Destaque and Promoções

--- a/Modulo10/index.html
+++ b/Modulo10/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <header>
-    <div class="container">
+    <div class="container container-flex">
       <h1>EBAC Motors</h1>
       <div class="menu-hamburguer">
         <span></span>
@@ -51,6 +51,156 @@
     <img src="images/slide3.png" alt="carro da ford">
 
   </div>
+  <section id="sobre-a-loja">
+    <div class="container container-flex">
+      <img src="./images/loja.jpg" alt="Imagem da LOJA EBAC MOTORS">
+      <div>
+        <h2>Sobre a EBAC MOTORS</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis vel quisquam, nam sequi ullam laborum
+          consequuntur sapiente doloremque minima voluptate totam molestias magnam soluta tempore perferendis corporis!
+          Ab, eligendi earum.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis vel quisquam, nam sequi ullam laborum
+          consequuntur sapiente doloremque minima voluptate totam molestias magnam soluta tempore perferendis corporis!
+          Ab, eligendi earum.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="container">
+      <h2>Em destaque</h2>
+      <ul class="container-flex lista-veiculos">
+        <li>
+          <img src="./images/carro-bmw.png" alt="carro-bmw">
+          <h3>Carro BMW</h3>
+          <p>
+            Câmbio automáticoo, 4 portas, vidros e traves elétricas.
+          </p>
+          <div class="price">
+            <strong>R$ 75.000,00</strong>
+          </div>
+          <button type="button">Tenho Interesse</button>
+        </li>
+        <li class="item-central ">
+          <img src="./images/carro-bmw.png" alt="carro-bmw">
+          <h3>Carro BMW</h3>
+          <p>
+            Câmbio automáticoo, 4 portas, vidros e traves elétricas.
+          </p>
+          <div class="price">
+            <strong>R$ 75.000,00</strong>
+          </div>
+          <button type="button">Tenho Interesse</button>
+        </li>
+        <li>
+          <img src="./images/carro-bmw.png" alt="carro-bmw">
+          <h3>Carro BMW</h3>
+          <p>
+            Câmbio automáticoo, 4 portas, vidros e traves elétricas.
+          </p>
+          <div class="price">
+            <strong>R$ 75.000,00</strong>
+          </div>
+          <button type="button">Tenho Interesse</button>
+        </li>
+        <li>
+          <img src="./images/carro-bmw.png" alt="carro-bmw">
+          <h3>Carro BMW</h3>
+          <p>
+            Câmbio automáticoo, 4 portas, vidros e traves elétricas.
+          </p>
+          <div class="price">
+            <strong>R$ 75.000,00</strong>
+          </div>
+          <button type="button">Tenho Interesse</button>
+        </li>
+        <li class="item-central">
+          <img src="./images/carro-bmw.png" alt="carro-bmw">
+          <h3>Carro BMW</h3>
+          <p>
+            Câmbio automáticoo, 4 portas, vidros e traves elétricas.
+          </p>
+          <div class="price">
+            <strong>R$ 75.000,00</strong>
+          </div>
+          <button type="button">Tenho Interesse</button>
+        </li>
+      </ul>
+    </div>
+  </section>
+
+  <section>
+    <div class="container">
+      <h2>Promoções</h2>
+      <ul class="container-flex lista-veiculos">
+        <li>
+          <img src="./images/carro-bmw.png" alt="carro-bmw">
+          <h3>Carro BMW</h3>
+          <p>
+            Câmbio automáticoo, 4 portas, vidros e traves elétricas.
+          </p>
+          <div class="price">
+            <del>R$100.000,00</del>
+            <strong>R$ 75.000,00</strong>
+          </div>
+          <button type="button">Tenho Interesse</button>
+        </li>
+        <li class="item-central ">
+          <img src="./images/carro-bmw.png" alt="carro-bmw">
+          <h3>Carro BMW</h3>
+          <p>
+            Câmbio automáticoo, 4 portas, vidros e traves elétricas.
+          </p>
+          <div class="price">
+            <del>R$100.000,00</del>
+            <strong>R$ 75.000,00</strong>
+          </div>
+          <button type="button">Tenho Interesse</button>
+        </li>
+        <li>
+          <img src="./images/carro-bmw.png" alt="carro-bmw">
+          <h3>Carro BMW</h3>
+          <p>
+            Câmbio automáticoo, 4 portas, vidros e traves elétricas.
+          </p>
+          <div class="price">
+            <del>R$100.000,00</del>
+            <strong>R$ 75.000,00</strong>
+          </div>
+          <button type="button">Tenho Interesse</button>
+        </li>
+        <li>
+          <img src="./images/carro-bmw.png" alt="carro-bmw">
+          <h3>Carro BMW</h3>
+          <p>
+            Câmbio automáticoo, 4 portas, vidros e traves elétricas.
+          </p>
+          <div class="price">
+            <del>R$100.000,00</del>
+            <strong>R$ 75.000,00</strong>
+          </div>
+          <button type="button">Tenho Interesse</button>
+        </li>
+        <li class="item-central">
+          <img src="./images/carro-bmw.png" alt="carro-bmw">
+          <h3>Carro BMW</h3>
+          <p>
+            Câmbio automáticoo, 4 portas, vidros e traves elétricas.
+          </p>
+          <div class="price">
+            <del>R$100.000,00</del>
+            <strong>R$ 75.000,00</strong>
+          </div>
+          <button type="button">Tenho Interesse</button>
+        </li>
+      </ul>
+    </div>
+  </section>
+
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
@@ -59,9 +209,14 @@
     $(document).ready(function () {
       $('#carousel-images').slick({
         autoplay: true,
+      });
+
+      $('.menu-hamburguer').click(function () {
+        $('nav').slideToggle();
       })
+
     })
   </script>
- </body>
+</body>
 
 </html>
