--- a/Modulo10/index.html
+++ b/Modulo10/index.html
@@ -201,6 +201,60 @@
     </div>
   </section>
 
+  <section>
+    <div class="container">
+      <h2>Entre em contato</h2>
+      <form>
+        <div class="form-campo">
+          <label for="nome">Nome:</label>
+          <input type="text" id="nome">
+        </div>
+        <div class="form-campo">
+          <label for="telefone">Telefone:</label>
+          <input type="tel" id="telefone">
+        </div>
+        <div class="form-campo">
+          <label for="email">E-mail:</label>
+          <input type="email" id="email">
+        </div>
+        <div class="form-campo">
+          <label for="veiculo-interesse">Veiculo de interesse:</label>
+          <input type="text" id="veiculo-interesse">
+        </div>
+        <div class="form-campo">
+          <label for="mensagem">Mensagem:</label>
+          <textarea id="mensagem"></textarea>
+        </div>
+        <button type="submit">Enviar</button>
+      </form>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container container-flex ">
+      <p>
+        Bruno Vinicius - 2023 &copy; EBAC Motors - Todos os direitos reservados  
+      </p>
+      <ul class="container-flex">
+        <li>
+          <a href="#">
+            <img src="icons/facebook.png" alt="icone do facebook">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="icons/instagram.png" alt="icone do instagram">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="icons/youtube.png" alt="icone do youtube">
+          </a>
+        </li>
+      </ul>
+    </div>
+  </footer>
+
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
