--- a/Modulo10/index.html
+++ b/Modulo10/index.html
@@ -207,23 +207,23 @@
       <form>
         <div class="form-campo">
           <label for="nome">Nome:</label>
-          <input type="text" id="nome">
+          <input type="text" id="nome" name="nome">
         </div>
         <div class="form-campo">
           <label for="telefone">Telefone:</label>
-          <input type="tel" id="telefone">
+          <input type="tel" id="telefone" name="telefone">
         </div>
         <div class="form-campo">
           <label for="email">E-mail:</label>
-          <input type="email" id="email">
+          <input type="email" id="email" name="email">
         </div>
         <div class="form-campo">
           <label for="veiculo-interesse">Veiculo de interesse:</label>
-          <input type="text" id="veiculo-interesse">
+          <input type="text" id="veiculo-interesse" name="veiculoDeInteresse">
         </div>
         <div class="form-campo">
           <label for="mensagem">Mensagem:</label>
-          <textarea id="mensagem"></textarea>
+          <textarea id="mensagem" name="mensagem"></textarea>
         </div>
         <button type="submit">Enviar</button>
       </form>
@@ -233,7 +233,7 @@
   <footer>
     <div class="container container-flex ">
       <p>
-        Bruno Vinicius - 2023 &copy; EBAC Motors - Todos os direitos reservados  
+        Bruno Vinicius - 2023 &copy; EBAC Motors - Todos os direitos reservados
       </p>
       <ul class="container-flex">
         <li>
@@ -258,6 +258,11 @@
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="js/jquery.mask.min.js"></script>
+  <script src="js/jquery.validate.min.js"></script>
+  <script src="js/messages_pt_BR.min.js"></script>
+
+
 
   <script>
     $(document).ready(function () {
@@ -267,6 +272,41 @@
 
       $('.menu-hamburguer').click(function () {
         $('nav').slideToggle();
+      })
+
+      $(`#telefone`).mask(`(00) 00000-0000`)
+
+      $('form').validate({
+        rules: {
+          nome: {
+            required: true
+          },
+          email: {
+            required: true, 
+            email: true
+          },
+          telefone: {
+            required: true
+          },
+          mensagem: {
+            required: true
+          },
+          veiculoDeInteresse: {
+            required: false 
+          }
+        }, 
+        messages: {
+          nome: 'Por favor, insira o seu nome'
+        },
+        submitHandler: function(form){
+          console.log(form)
+        },
+        invalidHandler: function(evento, validador){
+          let camposIncorretos = validador.numberOfInvalids();
+          if (camposIncorretos) {
+            alert(`Existem ${camposIncorretos} campos incorretos`)
+          }
+        }
       })
 
     })
