--- a/Modulo10/index.html
+++ b/Modulo10/index.html
@@ -201,7 +201,7 @@
     </div>
   </section>
 
-  <section>
+  <section id="contato">
     <div class="container">
       <h2>Entre em contato</h2>
       <form>
@@ -262,55 +262,7 @@
   <script src="js/jquery.validate.min.js"></script>
   <script src="js/messages_pt_BR.min.js"></script>
 
-
-
-  <script>
-    $(document).ready(function () {
-      $('#carousel-images').slick({
-        autoplay: true,
-      });
-
-      $('.menu-hamburguer').click(function () {
-        $('nav').slideToggle();
-      })
-
-      $(`#telefone`).mask(`(00) 00000-0000`)
-
-      $('form').validate({
-        rules: {
-          nome: {
-            required: true
-          },
-          email: {
-            required: true, 
-            email: true
-          },
-          telefone: {
-            required: true
-          },
-          mensagem: {
-            required: true
-          },
-          veiculoDeInteresse: {
-            required: false 
-          }
-        }, 
-        messages: {
-          nome: 'Por favor, insira o seu nome'
-        },
-        submitHandler: function(form){
-          console.log(form)
-        },
-        invalidHandler: function(evento, validador){
-          let camposIncorretos = validador.numberOfInvalids();
-          if (camposIncorretos) {
-            alert(`Existem ${camposIncorretos} campos incorretos`)
-          }
-        }
-      })
-
-    })
-  </script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
