--- a/Modulo10/index.html
+++ b/Modulo10/index.html
@@ -57,14 +57,14 @@
       <div>
         <h2>Sobre a EBAC MOTORS</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis vel quisquam, nam sequi ullam laborum
-          consequuntur sapiente doloremque minima voluptate totam molestias magnam soluta tempore perferendis corporis!
-          Ab, eligendi earum.
-        </p>
+          Exploração automotiva sem limites! Nossa loja oferece uma ampla gama de carros novos e semi novos para atender
+          a todos os gostos e necessidades. Das últimas inovações às opções acessíveis, estamos comprometidos em tornar
+          sua experiência de compra excepcional. Visite-nos e descubra o veículo perfeito que combina com você.
+        </p> <br>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis vel quisquam, nam sequi ullam laborum
-          consequuntur sapiente doloremque minima voluptate totam molestias magnam soluta tempore perferendis corporis!
-          Ab, eligendi earum.
+          Nossa concessionária apresenta uma seleção incomparável de carros novos e semi novos. Com qualidade verificada
+          e opções de financiamento convenientes, tornamos a realização do seu desejo automotivo uma realidade.
+          Visite-nos hoje e encontre o carro dos seus sonhos esperando por você.
         </p>
       </div>
     </div>
@@ -86,46 +86,46 @@
           <button type="button">Tenho Interesse</button>
         </li>
         <li class="item-central ">
-          <img src="./images/carro-bmw.png" alt="carro-bmw">
-          <h3>Carro BMW</h3>
+          <img src="./images/fusca.png" alt="carro-fusca">
+          <h3>Carro Fusca</h3>
           <p>
-            Câmbio automáticoo, 4 portas, vidros e traves elétricas.
+            Clássico ícone automotivo: o adorado e memorável carro Volkswagen Fusca.
           </p>
           <div class="price">
-            <strong>R$ 75.000,00</strong>
+            <strong>R$ 50.000,00</strong>
           </div>
           <button type="button">Tenho Interesse</button>
         </li>
         <li>
-          <img src="./images/carro-bmw.png" alt="carro-bmw">
-          <h3>Carro BMW</h3>
+          <img src="./images/moto-bmw.png" alt="moto-bmw">
+          <h3>Moto BMW</h3>
           <p>
-            Câmbio automáticoo, 4 portas, vidros e traves elétricas.
+            Elegância, potência e inovação definem essa marca icônica alemã.
           </p>
           <div class="price">
-            <strong>R$ 75.000,00</strong>
+            <strong>R$ 30.000,00</strong>
           </div>
           <button type="button">Tenho Interesse</button>
         </li>
         <li>
-          <img src="./images/carro-bmw.png" alt="carro-bmw">
-          <h3>Carro BMW</h3>
+          <img src="./images/ferrari.jpg" alt="ferrari">
+          <h3>Ferrari</h3>
           <p>
-            Câmbio automáticoo, 4 portas, vidros e traves elétricas.
+            Símbolo de velocidade, luxo e paixão pela excelência automotiva.
           </p>
           <div class="price">
-            <strong>R$ 75.000,00</strong>
+            <strong>R$ 3.000.000,00</strong>
           </div>
           <button type="button">Tenho Interesse</button>
         </li>
         <li class="item-central">
-          <img src="./images/carro-bmw.png" alt="carro-bmw">
-          <h3>Carro BMW</h3>
+          <img src="./images/mercedes.jpg" alt="mercedes">
+          <h3>Mercedes</h3>
           <p>
-            Câmbio automáticoo, 4 portas, vidros e traves elétricas.
+            Elegância, inovação e prestígio em cada detalhe dos automóveis.
           </p>
           <div class="price">
-            <strong>R$ 75.000,00</strong>
+            <strong>R$ 400.000,00</strong>
           </div>
           <button type="button">Tenho Interesse</button>
         </li>
@@ -150,50 +150,50 @@
           <button type="button">Tenho Interesse</button>
         </li>
         <li class="item-central ">
-          <img src="./images/carro-bmw.png" alt="carro-bmw">
-          <h3>Carro BMW</h3>
+          <img src="./images/fusca.png" alt="carro-fusca">
+          <h3>Fusca</h3>
           <p>
-            Câmbio automáticoo, 4 portas, vidros e traves elétricas.
+            Clássico ícone automotivo: o adorado e memorável carro Volkswagen Fusca.
           </p>
           <div class="price">
-            <del>R$100.000,00</del>
-            <strong>R$ 75.000,00</strong>
+            <del>R$55.000,00</del>
+            <strong>R$ 50.000,00</strong>
           </div>
           <button type="button">Tenho Interesse</button>
         </li>
         <li>
-          <img src="./images/carro-bmw.png" alt="carro-bmw">
-          <h3>Carro BMW</h3>
+          <img src="./images/moto-bmw.png" alt="moto-bmw">
+          <h3>Moto BMW</h3>
           <p>
-            Câmbio automáticoo, 4 portas, vidros e traves elétricas.
+            Elegância, potência e inovação definem essa marca icônica alemã.
           </p>
           <div class="price">
-            <del>R$100.000,00</del>
-            <strong>R$ 75.000,00</strong>
+            <del>R$40.000,00</del>
+            <strong>R$ 30.000,00</strong>
           </div>
           <button type="button">Tenho Interesse</button>
         </li>
         <li>
-          <img src="./images/carro-bmw.png" alt="carro-bmw">
-          <h3>Carro BMW</h3>
+          <img src="./images/ferrari.jpg" alt="ferrari">
+          <h3>Ferrari</h3>
           <p>
-            Câmbio automáticoo, 4 portas, vidros e traves elétricas.
+            Símbolo de velocidade, luxo e paixão pela excelência automotiva.
           </p>
           <div class="price">
-            <del>R$100.000,00</del>
-            <strong>R$ 75.000,00</strong>
+            <del>R$3.100.000,00</del>
+            <strong>R$ 3.000.000,00</strong>
           </div>
           <button type="button">Tenho Interesse</button>
         </li>
         <li class="item-central">
-          <img src="./images/carro-bmw.png" alt="carro-bmw">
-          <h3>Carro BMW</h3>
+          <img src="./images/mercedes.jpg" alt="mercedes">
+          <h3>Mercedes</h3>
           <p>
-            Câmbio automáticoo, 4 portas, vidros e traves elétricas.
+            Elegância, inovação e prestígio em cada detalhe dos automóveis.
           </p>
           <div class="price">
-            <del>R$100.000,00</del>
-            <strong>R$ 75.000,00</strong>
+            <del>R$500.000,00</del>
+            <strong>R$ 400.000,00</strong>
           </div>
           <button type="button">Tenho Interesse</button>
         </li>
