--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script src="js/jquery.mask.min.js"></script>
+  <script src="jquery.mask.min.js"></script>
 
   <script>
     $(document).ready(function () {
