--- a/Modulo11/index.html
+++ b/Modulo11/index.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
   <h1>Título</h1>
   <h2>Subtítulo</h2>
   <section>
     <h2>Subtitulo 2</h2>
     <p>Parágrafo</p>
-    
+
   </section>
 
-
+  <picture>
+    <source media="(min-width: 400px)"
+      srcset="https://sm.ign.com/ign_br/screenshot/default/naruto-1498593686428-v2-1920x1080_pxb6.png">
+    <source media="(min-width: 1280px)"
+      srcset="https://www.otempo.com.br/image/contentid/policy:1.2802075:1674404731/WhatsApp-Image-2023-01-19-at-16-05-04-jpeg.jpeg?f=3x2&w=1224">
+    <img
+      href="https://assetsio.reedpopcdn.com/naruto_2OpG6QJ.jpg?width=1600&height=900&fit=crop&quality=100&format=png&enable=upscale&auto=webp"
+      alt="passarinho"></img>
+  </picture>
 
 
 
 </body>
+
 </html>
