--- a/Modulo08/index.html
+++ b/Modulo08/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="aula2_estrutura.css">
+  <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
@@ -56,7 +56,7 @@
     </table>
   </div>
 
-  <script src="aula2_estrutura.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
