--- a/Modulo09/index.html
+++ b/Modulo09/index.html
@@ -9,7 +9,7 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <title>Projeto 9 - Conhecendo o jQuery</title>
-  <link rel="stylesheet" href="aula1_seletores.css">
+  <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
@@ -57,7 +57,7 @@
 
 
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-<script src="aula1_seletores.js"></script>
+<script src="main.js"></script>
 </body>
 
 </html>
