--- a/Modulo11/index.html
+++ b/Modulo11/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EBAC NEWS</title>
+  <title>Portal Noticia</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -12,23 +12,50 @@
 </head>
 
 <body>
-  <h1>Título</h1>
-  <h2>Subtítulo</h2>
-  <section>
-    <h2>Subtitulo 2</h2>
-    <p>Parágrafo</p>
+  <header>
+    <div class="container">
+      <h1>EBAC NEWS</h1>
+      <form>
+        <input type="search" placeholder="Busque no site">
+        <button type="submit">Pesquisar</button>t
+      </form>
 
-  </section>
+    </div>
+    <nav>
+      <ul class="menu">
+        <li>
+          Esportes
 
-  <picture>
-    <source media="(min-width: 400px)"
-      srcset="https://sm.ign.com/ign_br/screenshot/default/naruto-1498593686428-v2-1920x1080_pxb6.png">
-    <source media="(min-width: 1280px)"
-      srcset="https://www.otempo.com.br/image/contentid/policy:1.2802075:1674404731/WhatsApp-Image-2023-01-19-at-16-05-04-jpeg.jpeg?f=3x2&w=1224">
-    <img
-      href="https://assetsio.reedpopcdn.com/naruto_2OpG6QJ.jpg?width=1600&height=900&fit=crop&quality=100&format=png&enable=upscale&auto=webp"
-      alt="passarinho"></img>
-  </picture>
+          <ul class="submenu">
+            <li>
+              <a href="#">Futebol</a>
+            </li>
+            <li>
+              <a href="#">Basquete</a>
+            </li>
+            <li>
+              <a href="#">Fórmula 1</a>
+            </li>
+          </ul>
+        </li>
+        <li>
+          Economia
+          <ul class="submenu">
+            <li>
+              <a href="#">Bolsa de Valores</a>
+            </li>
+            <li>
+              <a href="#">Importo de Renda</a>
+            </li>
+            <li>
+              <a href="#">Finanças Pessoais</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+      <div class="clear"></div>
+    </nav>
+  </header>
 
 
 
