--- a/Modulo11/index.html
+++ b/Modulo11/index.html
@@ -21,7 +21,7 @@
       </form>
 
     </div>
-    <nav>
+    <nav class="container">
       <ul class="menu">
         <li>
           Esportes
@@ -56,6 +56,71 @@
       <div class="clear"></div>
     </nav>
   </header>
+  <div class="container conteudo">
+    <main>
+      <section class="destaque">
+        <h2>Em destaque</h2>
+        <article class="noticia">
+          <a href="#">
+            <img src="https://via.placeholder.com/320x320">
+            <h3>Lorem adsa skjdksajk dskajdksa kdjaskd kjsakdj kjsakdj ksjdkasj</h3>
+          </a>
+        </article>
+      </section>
+      <section>
+        <h2>Ultimas notícias</h2>
+        <div class="noticias">
+          <article class="noticia">
+            <a href="#">
+              <img src="https://via.placeholder.com/320x320">
+              <h3>Lorem adsa skjdksajk dskajdksa kdjaskd kjsakdj kjsakdj ksjdkasj</h3>
+            </a>
+          </article>
+          <article class="noticia">
+            <a href="#">
+              <img src="https://via.placeholder.com/320x320">
+              <h3>Lorem adsa skjdksajk dskajdksa kdjaskd kjsakdj kjsakdj ksjdkasj</h3>
+            </a>
+          </article>
+          <article class="noticia">
+            <a href="#">
+              <img src="https://via.placeholder.com/320x320">
+              <h3>Lorem adsa skjdksajk dskajdksa kdjaskd kjsakdj kjsakdj ksjdkasj</h3>
+            </a>
+          </article>
+          <article class="noticia">
+            <a href="#">
+              <img src="https://via.placeholder.com/320x320">
+              <h3>Lorem adsa skjdksajk dskajdksa kdjaskd kjsakdj kjsakdj ksjdkasj</h3>
+            </a>
+          </article>
+        </div>
+      </section>
+    </main>
+    <aside>
+      <section class="novidades">
+        <h2>Novidades</h2>
+        <article class="noticia">
+          <a href="#">
+            <img src="https://via.placeholder.com/320x320">
+            <h3>Lorem adsa skjdksajk dskajdksa kdjaskd kjsakdj kjsakdj ksjdkasj</h3>
+          </a>
+        </article>
+        <article class="noticia">
+          <a href="#">
+            <img src="https://via.placeholder.com/320x320">
+            <h3>Lorem adsa skjdksajk dskajdksa kdjaskd kjsakdj kjsakdj ksjdkasj</h3>
+          </a>
+        </article>
+        <article class="noticia">
+          <a href="#">
+            <img src="https://via.placeholder.com/320x320">
+            <h3>Lorem adsa skjdksajk dskajdksa kdjaskd kjsakdj kjsakdj ksjdkasj</h3>
+          </a>
+        </article>
+      </section>
+    </aside>
+  </div>
 
 
 
