--- a/Modulo12/index.html
+++ b/Modulo12/index.html
@@ -7,7 +7,30 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css ">
 </head>
 <body>
-  <h1>Olá Bootstrap</h1>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <img src="https://via.placeholder.com/180x180" alt="">
+        <h3>Produto</h3>
+      </div>
+      <div class="col">
+        <img src="https://via.placeholder.com/180x180" alt="">
+        <h3>Produto</h3>
+      </div>
+      <div class="col">
+        <img src="https://via.placeholder.com/180x180" alt="">
+        <h3>Produto</h3>
+      </div>
+      <div class="col">
+        <img src="https://via.placeholder.com/180x180" alt="">
+        <h3>Produto</h3>
+      </div>
+      <div class="col">
+        <img src="https://via.placeholder.com/180x180" alt="">
+        <h3>Produto</h3>
+      </div>
+    </div>
+  </div>
   
 </body>
 </html>
