--- a/Modulo12/index.html
+++ b/Modulo12/index.html
@@ -7,36 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css ">
 </head>
 <body>
-<table class="table">
-  <caption>Tablea de produtos</caption>
-  <thead>
-    <th>Nome do Produto</th>
-    <th>Nome do Produto</th>
-    <th>Nome do Produto</th>
-    <th>Nome do Produto</th>
-
-  </thead>
-  <tbody>
-    <tr>
-      <td>Iphone 13</td>
-      <td>Iphone 13</td>
-      <td>Iphone 13</td>
-      <td>Iphone 13</td>
-    </tr>
-    <tr>
-      <td>Iphone 13</td>
-      <td>Iphone 13</td>
-      <td>Iphone 13</td>
-      <td>Iphone 13</td>
-    </tr>
-    <tr>
-      <td>Iphone 13</td>
-      <td>Iphone 13</td>
-      <td>Iphone 13</td>
-      <td>Iphone 13</td>
-    </tr>
-  </tbody>
-</table>
-  
+<div class="accordion"></div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
