--- a/Modulo12/index.html
+++ b/Modulo12/index.html
@@ -6,32 +6,13 @@
   <title>Document</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css ">
 </head>
-<body>
-<div class="accordion">
-  <div class="accordion-item">
-    <div class="accordion-header">
-      <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#resposta1">
-        Pergunta
-      </button>
-    </div>
-    <div id="resposta1" class="accordion-collapse collapse show">
-      <div class="accordion-body">
-        Resposta da pergunta
-      </div>
-    </div>
-  </div>
-  <div class="accordion-item">
-    <div class="accordion-header">
-      <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#resposta2">
-        Pergunta 2
-      </button>
-    </div>
-    <div id="resposta2" class="accordion-collapse collapse">
-      <div class="accordion-body">
-        Resposta da pergunta 2
-      </div>
-    </div>
-  </div>
+<button class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#preco">
+  Ver preço
+</button>
+<div class="collapse collapse-horizontal" id="preco">
+  <p>
+    3x de R$300,00
+  </p>
 </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
