--- a/Modulo13/navbar.html
+++ b/Modulo13/navbar.html
@@ -65,6 +65,14 @@
     </section>
     <section id="produtos">
       <h2>Produtos</h2>
+      <div class="container">
+        <nav class="nav nav-tabs">
+          <button class="nav-link" type="button">Eletrônicos</button>
+          <button class="nav-link" type="button">Moda Masculina</button>
+          <button class="nav-link" type="button">Moda Feminina</button>
+
+        </nav>
+      </div>
     </section>
     <section id="promocoes">
       <h2>Promoções</h2>
