--- a/Modulo13/navbar.html
+++ b/Modulo13/navbar.html
@@ -56,6 +56,7 @@
             </li>
           </ul>
         </nav>
+        <button id="btn-checar-emails" class="btn btn-warning" type="button">Checar caixa de entrada</button>
       </div>
     </div>
   </header>
@@ -99,7 +100,34 @@
     </div>
   </div>
 
+  <div class="toast-container position-fixed bottom-0 end-0 p-3">
+    <div class="toast" id="mensagens-alerta">
+      <header class="toast-header">
+        <strong>Importante</strong>
+      </header>
+      <div class="toast-body">
+        Você possui 10 mensagens não lidas
+        <div class="mt-2 pt-2 border-top">
+          <button data-bs-dismiss="toast" class="btn btn-danger" type="button">
+            Descartar
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="lib/bootstrap.bundle.min.js"></script>
+  <script>
+    const ativadorToast = document.getElementById('btn-checar-emails');
+    const mensagem = document.getElementById('mensagens-alerta');
+
+    if (ativadorToast) {
+      ativadorToast.addEventListener('click', function(){
+        const toast = new bootstrap.Toast(mensagem);
+        toast.show();
+      })
+    }
+  </script>
 </body>
 
 </html>
