--- a/Modulo14/index.html
+++ b/Modulo14/index.html
@@ -4,8 +4,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
+  <header class="navbar navar-expand-lg sticky-top">
+    <div class="container">
+      <h1 class="navbar-brand">Nome do restaurante</h1>
+      <nav>
+        <ul class="nav nav-pills">
+          <li class="nav-item">
+            <a href="" class="nav-link active">Sobre o restaurante</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link">Eventos</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link">Nosso Cardápio</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link">Fale conosco</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
   
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
