--- a/Modulo14/index.html
+++ b/Modulo14/index.html
@@ -47,6 +47,28 @@
       </nav>
     </div>
   </header>
+  <section id="sobre-o-restaurante">
+    <div class="carousel slide" data-bs-ride="carousel" id="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="3000">
+          <img src="images/slides/slide1.png" alt="Foto do espaço interno do restaurante">
+        </div>
+        <div class="carousel-item" data-bs-interval="3000">
+          <img src="images/slides/slide2.png" alt="Duas taças de vinho">
+        </div>
+        <div class="carousel-item" data-bs-interval="3000">
+          <img src="images/slides/slide3.png" alt="Uma mesa com comida">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </button>
+      <div class="carousel-indicators"></div>
+    </div>
+  </section>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
