--- a/Modulo14/index.html
+++ b/Modulo14/index.html
@@ -15,16 +15,16 @@
 </head>
 
 <body>
-  <header class="navbar navbar-expand-lg sticky-top p-4">
+  <header class="navbar navbar-expand-lg sticky-top p-4" id="cabecalho">
     <div class="container">
-      <h1 class="navbar-brand m-0">Nome do restaurante</h1>
+      <h1 class="navbar-brand m-0 section-title">Nome do restaurante</h1>
       <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu-navegacao">
         <span class="navbar-toggler-icon"></span>
       </button>
       <nav class="navbar-collapse collapse justify-content-end" id="menu-navegacao">
         <ul class="nav nav-pills d-block d-md-flex">
           <li class="nav-item fw-bold">
-            <a href="" class="nav-link active">
+            <a href="#sobre-o-restaurante" class="nav-link">
               <i class="bi bi-house-door me-1"></i>
               Sobre o restaurante</a>
           </li>
@@ -47,28 +47,66 @@
       </nav>
     </div>
   </header>
-  <section id="sobre-o-restaurante">
-    <div class="carousel slide" data-bs-ride="carousel" id="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-interval="3000">
-          <img src="images/slides/slide1.png" alt="Foto do espaço interno do restaurante">
+  <div data-bs-spy="scroll" data-bs-target="cabecalho">
+    <section id="sobre-o-restaurante">
+      <div class="carousel slide" data-bs-ride="carousel" id="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="3000">
+            <img src="images/slides/slide1.png" alt="Foto do espaço interno do restaurante">
+          </div>
+          <div class="carousel-item" data-bs-interval="3000">
+            <img src="images/slides/slide2.png" alt="Duas taças de vinho">
+          </div>
+          <div class="carousel-item" data-bs-interval="3000">
+            <img src="images/slides/slide3.png" alt="Uma mesa com comida">
+          </div>
         </div>
-        <div class="carousel-item" data-bs-interval="3000">
-          <img src="images/slides/slide2.png" alt="Duas taças de vinho">
-        </div>
-        <div class="carousel-item" data-bs-interval="3000">
-          <img src="images/slides/slide3.png" alt="Uma mesa com comida">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon"></span>
+        </button>
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carousel" class="active" data-bs-slide-to="0"></button>
+          <button type="button" data-bs-target="#carousel" data-bs-slide-to="1"></button>
+          <button type="button" data-bs-target="#carousel" data-bs-slide-to="2"></button>
+
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon"></span>
-      </button>
-      <div class="carousel-indicators"></div>
-    </div>
-  </section>
+      <div class="pt-5 pb-5 ">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-5">
+              <img src="images/restaurante.jpg" class="d-block w-100 rounded"
+                alt="Foto do espaço interno do restaurante">
+            </div>
+            <div class="col-md-7">
+              <h2 class="section-title">Sobre <span>o restaurante</span></h2>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe, reprehenderit, accusantium molestiae
+                nostrum ipsam facere itaque aliquid cumque sint non temporibus ad, laboriosam quos fuga porro quia
+                quisquam quam perspiciatis.
+              </p>
+              <h3 class="section-title">Sobre <span>o espaço</span></h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi velit consequuntur amet labore
+                perspiciatis eum, alias ratione id aspernatur doloremque praesentium doloribus aliquam, enim sapiente!
+                Veniam dolor possimus soluta ut.
+              </p>
+              <ul>
+                <li>Item 1</li>
+                <li>Item 2</li>
+                <li>Item 3</li>
+
+
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
