--- a/sass/index.html
+++ b/sass/index.html
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="build/main.css">
 </head>
 <body>
+<header>
+  <div class="cotainer">
+    <h1>Nome do site</h1>
+  </div>
+</header>
   
 </body>
 </html>
