--- a/sass/index.html
+++ b/sass/index.html
@@ -13,6 +13,19 @@
   </div>
 </header>
 <button class="sucesso" type="submit">Clique Aqui</button>
+<section class="produtos">
+  <div class="container">
+    <div class="produto">
+      <h3>Livro de CSS</h3>
+    </div>
+    <div class="produto">
+      <h3>Livro de JS</h3>
+    </div>
+    <div class="produto">
+      <h3>Livro de SASS</h3>
+    </div>
+  </div>
+</section>
   
 </body>
 </html>
