--- a/sass/index.html
+++ b/sass/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Projeto SASS</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="build/main.css">
 </head>
 <body>
-<header>
-  <div class="cotainer">
-    <h1>Nome do site</h1>
+
+  <header>
+    <div class="container">
+      <h1>Projeto com SASS</h1>
+    </div>
+  </header>
+  <div class="form-container">
+    <h2>Se inscreva na Newsletter para receber dicas sobre CSS</h2>
+    <form>
+      <label for="nome-completo">Nome Completo:</label>
+      <input type="text" id="nome-completo">
+      <label for="email">Seu melhor e-mail:</label>
+      <input type="email" id="email">
+      <button type="submit">Cadastrar</button>
+    </form>
   </div>
-</header>
-<button class="sucesso" type="submit">Clique Aqui</button>
-<section class="produtos">
-  <div class="container">
-    <div class="produto">
-      <h3>Livro de CSS</h3>
-    </div>
-    <div class="produto">
-      <h3>Livro de JS</h3>
-    </div>
-    <div class="produto">
-      <h3>Livro de SASS</h3>
-    </div>
-  </div>
-</section>
-  
+
 </body>
+
 </html>
